# aoe2-transparent-buildings

./: .gitignore  LICENSE  README.md  build_mod.py  dxt.py  gui.py  paths.py  pyproject.toml  restart-game.bat  shorten.py  sld.py
.github/workflows/: build-exe.yml  test.yml
docs/: building-shortening.md  sld-delta-encoding.md
tests/: test_batch_ops.py  test_dxt.py  test_make_transparent.py  test_shorten.py  test_sld.py
tools/: analyze_shape.py  check_animations.py  check_tiles.py  inspect_sld.py  make_poster.py  sld_to_png.py  test_roundtrip.py  verify_dithering.py
