[project]
name = "aoe2-transparent-buildings"
version = "0.1.0"
description = "AoE2 DE mod that makes buildings semi-transparent using DXT1 checkerboard dithering"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pillow>=11.0.0",
    "rich>=14.0.0",
]

[project.scripts]
build-mod = "build_mod:main"
gui = "gui:main"
inspect-sld = "tools.inspect_sld:main"
analyze-shape = "tools.analyze_shape:main"
check-tiles = "tools.check_tiles:main"
test-roundtrip = "tools.test_roundtrip:main"
check-animations = "tools.check_animations:main"
sld-to-png = "tools.sld_to_png:main"
make-poster = "tools.make_poster:main"
verify-dithering = "tools.verify_dithering:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
build = [
    "pyinstaller>=6.0",
]
